--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -696,25 +696,535 @@ Flexibility is More Important than Efficiencyin the Long Term
 **长期来看，灵活性远比效率重要**
 
 
-#Context, not Control（情景管理而非控制）
+# Context, not Control（情景管理而非控制）
+
+If you want to build a ship, don't drum up the people to gather wood, divide the work, and give orders.  Instead, teach them to yearn for the vast and endless sea.“ 
+
+如果你想造一艘船，先不要雇人去收集木头，也不要给他们分配任何任务，而是去激发他们对浩瀚汪洋的渴望。”
+
+-Antoine De Saint-Exupery,  Author of The Little Prince《小王子》作者
+
+The best managers figure out how to get great outcomes by setting the appropriate context, rather than by trying to control their people
+
+最佳的管理通过设定合适的情景而非试图控制员工以达到最大成果。
+
+## Context, not Control情境管理而非掌控管理
+
+Provide the insight and understanding to enable sound decisions
+
+(提供洞察力和理解力去促成合理的决定。)
+
+Context (embrace) 情境管理（要坚持）
+
+- Strategy
+- Metrics
+- Assumptions
+- Objectives
+- Clearly-defined roles
+- Knowledge of the stakes
+- Transparency around decision-making
+
+- 战略
+- 度量体系
+- 假定
+- 目标
+- 明确界定的规则
+- 关于风险的知识
+- 决策所需的透明信息
+
+Control (avoid)控制（要避免）
+
+- Top-down decision-making
+- Management approval
+- Committees
+- Planning and process valued more than results
+
+- 自上而下的决策过程
+- 管理许可
+- 委员会
+- 计划和流程的价值高于结果
+
+
+## Good Context优秀的情景管理
+
+- Link to company/functional goals
+- Relative priority (how important/how time sensitive) 
+  - Critical (needs to happen now), or…
+  - Nice to have (when you can get to it)
+- Level of precision & refinement
+  - No errors (credit cards handling, etc…), or…
+  - Pretty good / can correct errors (website), or…
+  - Rough (experimental)
+- Key stakeholders
+- Key metrics / definition of success
+
+- 和公司目标或者功能性目标相关联
+- 相对优先权（多么重要/时间多么紧迫）
+  - 决定性的（现在必须）
+  - 锦上添花的（等你做到了）
+- 依据精度和纯度的水平
+  - 无错的（信用卡操作）
+  - 相当好的/可纠正错误（网站）
+  - 粗糙的（实验性的）
+- 重要的相关利益人
+- 重要的指标/界定成功标准
+
+
+Managers:致管理者：
+
+When one of your talented people does something dumb, don’t  blame themInstead, ask yourself what context you failed to set
+
+当你的人才犯下了愚蠢的错误，不要指责他们。相反，你应该问问自己，在情景设定上犯了什么错？
+
+When you are tempted to “control” your people, ask yourself what context you could set instead
+
+当你准备“控制”你的员工，请问一下自己，可以用什么情境取代？
+
+Are you articulate and inspiring enough about goals and strategies? 
+
+对于目标和策略，你是否已经做到了足够清晰和足够鼓舞人心？
+
+## Why Managing Through Context?为什么要用情景管理？
+
+High performance people will do better work if they understand the context
+
+高绩效仁慈啊如果很好地理解了当下情景，能够更好地工作。
+
+## Investing in Context寄望于情境
+
+This is why we do new employee college, frequent department meetings, and why we are so open internally about strategies and results
+
+这就是为什么我们开办新员工学院，定期举办部门会议，以及为什么我们在内部对于战略和结果如此开诚布公。
+
+## Exceptions to “Context, not Control”“情景管理而非控制”的例外情况
+
+- Control can be important in emergency 
+  - No time to take long-term capacity-building view
+- Control can be important when someone is still learning their area
+  - Takes time to pick up the necessary context
+- Control can be important when you have the wrong person in a role
+  - Temporarily, no doubt
+
+- 控制管理在紧急情况下非常重要
+  - 没有时间做长期的能力建设
+- 控制管理在某人依然处于学习阶段非常重要
+  - 花时间去找出必要的情景
+- 控制管理在你所托非人时非常重要
+  - 临时的，毫无疑问
 
 
 
 
-#Highly Aligned, Loosely Coupled（认同一致，松散耦合）
+
+# Highly Aligned, Loosely Coupled（认同一致，松散耦合）
+
+## Three Models of Corporate Teamwork合作团队的3种模式
+
+- Tightly Coupled Monolith
+- Independent Silos
+- Highly Aligned, Loosely Coupled
+
+- 紧密耦合的巨无霸型
+- 各自为政的国企型
+- 认同一致-松散耦合型
+
+
+## Tightly Coupled Monolith（巨无霸型）
+
+- Senior management reviews nearly all tactics	
+  -- e.g., CEO reviews all job offers or advertising
+- Lots of x-departmental buy-in meetings
+- Keeping other internal groups happy has equal precedence with pleasing customers
+- Mavericks get exhausted trying to innovate
+- Highly coordinated through centralization, but very slow, and slowness increases with size
+
+- 高阶管理人员对战术事无巨细全部过问
+  - 例如：CEO评估所有的招聘文案或者广告
+- 大量的跨部门协调会
+- 让其他内部团队满意和取悦顾客拥有相同权重
+- 想要创新的人员感觉筋疲力竭
+- 通过中央集权管理保持各部门协调，但是非常缓慢，这种缓慢程度和公司同步增长。
+
+## Independent Silos（国企型）
+
+- Each group executes on their objectives with little coordination
+  - Everyone does their own thing
+- Work that requires coordination suffers
+- Alienation and suspicion between departments
+- Only works well when areas are independent
+  - e.g., aircraft engines and blenders for GE
+
+- 每个团执行各自的目标，基本没有协同。
+  - 每个团队做自己的事。
+- 要求协同的工作让各方都很受伤。
+- 部门之间山头林立，彼此排挤，相互怀疑。
+- 只有完全独立的业务领域内才能运转顺畅。
+  - 例子：GE公司的飞机引擎制造部门和搅拌机制造部门
+
+## Highly Aligned, Loosely Coupled认同一致，松散耦合
+
+- Highly Aligned 
+  - Strategy and goals are clear, specific, broadly understood
+  - Team interactions focused on strategy and goals, rather than tactics
+  - Requires large investment in management time to be transparent and articulate and perceptive
+
+- 认同一致
+  - 战略和目标为全员所清晰、详尽和广泛的理解
+  - 团队互动着眼于战略和目标，而非战术
+  - 需要大量管理上的时间实现对信息的透明、准确和全员的领悟
+
+- Loosely Coupled
+  - Minimal cross-functional meetings except to get aligned on goals and strategy
+  - Trust between groups on tactics without previewing/approving each one – so groups can move fast
+  - Leaders reaching out proactively for ad-hoc coordination and perspective as appropriate
+  - Occasional post-mortems on tactics necessary to increase alignment
+
+- 松散耦合
+  - 除非是为了目标和战略而合作，否则尽量减少跨职能部门的会议。
+  - 相信团队合作执行战术动作，无需进行预演或者审批，这样团队能快速行动。
+  - 领导者在合适的时间积极出手做临时协调。
+  - 偶尔的战术复盘对增进团队间合作是必要的。
+
+Highly Aligned, Loosely Coupled teamwork effectiveness depends on high performance people and good context
+
+高度一致又松散耦合的团队效率取决于高绩效人才和优秀的情境管理
+
+Goal is to be Big and Fast and Flexible
+
+目标是：更大，更快，更灵活。
+
+
+# Pay Top of Market（支付市场最高工资）
+
+## Pay Top of Market is Core toHigh Performance Culture支付市场最高薪酬是高绩效文化的核心
+
+One outstanding employee gets more done and costs less than two adequate employees
+
+一个卓越的员工比两个胜任的员工做得更多，花得更少
+
+We endeavor to have only outstanding employees
+
+我们致力于只雇佣卓越员工
+
+## Three Tests for Top of Market for a Person判断卓越员工的3个测试
+
+- What could person get elsewhere?
+- What would we pay for replacement?
+- What would we pay to keep that person?
+  - If they had a bigger offer elsewhere
+
+- 这个人可以在别的地方得到吗？
+- 为了取代他我们要付出多少？
+- 为了留下他我们愿意付出多少？
+  - 假若他在别处有更好的雇佣条件。
+
+
+## Takes Great Judgment做好判断
+
+- Goal is to keep each employee at top of market for that person 
+  - Pay them more than anyone else likely would
+  - Pay them as much as a replacement would cost
+  - Pay them as much as we would pay to keep them if they had higher offer from elsewhere
+
+- 目标是保持每一个员工都处在人力市场薪酬水平的顶端
+  - 付给他们比其他家公司可能给的更高薪酬。
+  - 按照取代他们所需花费的标准支付他们薪酬。
+  - 如果别的公司开出更好的条件，尽我们全力加薪以挽留他们
+
+## Titles Not Very Helpful头衔没有多大用处
+
+- Lots of people have the title “Major League Pitcher” but they are not all equally effective
+- Similarly, all people with the title “Senior Marketing Manager” or “Director of Engineering” are not equally effective
+- So the art of compensation is answering the Three Tests for each employee
+
+- 许多人有“大联盟投手”的头衔，但他们彼此不是等同水平。
+- 类似，所有冠以“高级市场经理”或者“工程总监”的人也不是等同水平。
+- 所以，薪酬的秘诀就在于针对每一个员工回答刚才的三个问题。
+
+## Annual Comp Review年度薪酬评估
+
+- At many firms, when employees are hired, market compensation applies
+  - But at comp review time, it no longer applies!
+- At Netflix, market comp always applies:
+  - Essentially, top of market comp is re-established each year for high performing employees
+  - At annual comp review, manager has to answer the Three Tests for the personal market for each of their employees
+
+- 在许多公司，当员工被聘用的时候，他们的薪酬和人力市场价格是相匹配的。
+  - 但是到了薪酬评估的时候，就不再匹配了！
+- 在Netflix，它们总是相匹配的：
+  - 本质上来说，对于高绩效人才，市场顶级人员薪酬水平每年都会重新确立
+  - 在年度薪酬评估的时候，管理人员针对自己的每一个员工回答前面的那三个问题。
+
+## No Fixed Budgets没有固定的人力预算
+
+- There are no centrally administered “raise pools” each year
+- Instead, each manager aligns their people to top of market each year – the market will be different in different areas
+
+- 每年没有公司高层决定的“加薪池”
+- 相反的，每个管理者每年把自己下属的薪酬和市场最高价格调整到一致。
+
+## Compensation Over Time应时薪酬
+
+- Some people will move up in comp very quickly because their value in the marketplace is moving up quickly, driven by increasing skills and/or great demand for their area
+- Some people will stay flat because their value in the marketplace has done that
+  - Depends in part on inflation and economy
+  - Always top of market, though, for that person
+
+- 有些人薪酬增长非常迅猛是因为他们的身价在人力市场上的增长非常快，这往往是因为技能的增长或者特定领域的人力需求旺盛。
+- 有些人的薪酬维持少变是因为他们在人力市场上的身价就放在那儿。
+  - 部分原因在于通胀和经济因素
+  - 尽管如此，对于这个人来说，其薪酬水平也依然在市场最高价格
+
+## Compensation Not Dependent on Netflix Success薪酬并不取决于Netflix的成功
+
+- Whether Netflix is prospering or floundering, we pay at the top of the market
+  - i.e., sports teams with losing records still pay talent the market rate
+  - Employees can choose how much they want to link their economic destiny to Netflix by deciding how many Netflix stock options they want to hold
+
+- 无论Netflix的盛衰，我们都支付市场最高薪酬。
+  - 例如：体育队伍哪怕失掉比赛也得按照市场水平支付薪酬。
+  - 员工可以通过决定持有多少Netflix期权的方式，决定自己愿意多大程度上把自己的经济前景和Netflix绑定在一起。
+
+## Bad Comp Practices糟糕的薪酬实践
+
+- Manager sets pay at Nth percentile of title-linked compensation data
+  - The “Major League Pitcher” problem
+- Manager cares about internal parity instead of external market value
+  - Fairness in comp is being true to the market
+- Manager gives everyone a 4% raise
+- Very unlikely to reflect the market
+
+- 管理者根据头衔，按照百分比排列设定薪酬。
+  - 会导致“大联盟投手”问题。
+- 管理者关心内部薪酬一致而无视外部人力市场价值
+  - 在人力市场上，薪酬水平的公平性是真实不虚的。
+- 管理者给每个员工4%的增幅。
+- 根本无法反映市场的情况。
+
+## When Top of Market Comp Done Right...当市场最高薪酬设置得当
+
+We will rarely counter with higher comp when someone is voluntarily leaving because we have already moved comp to our max for that person
+
+我们很少遇见有员工因为更高薪酬而选择主动离职，因为我们已经尽全力给到他最高工资。
+
+Employees will feel they are getting paid well relative to their other options in the market
+
+和市场上提供的其他选择相比，我们的员工会觉得他们的薪酬不错。
+
+## Versus Traditional Model和传统模式对比
+
+- Traditional model is good prior year earns a raise, independent of market
+  - Problem is employees can get materially under- or over-paid relative to the market, over time
+  - When materially under-paid, employees switch firms to take advantage of market-based pay on hiring
+  - When materially over-paid, employees are trapped in current firm
+- Consistent market-based pay is better model
+
+- 传统模式是上年度业绩好则加薪，完全和市场价格脱离
+  - 问题是员工会实质上得到低于或者高于市场价格的薪酬
+  - 当实质性低于市场价格，那么员工会换公司以获取基于市场价格的薪酬
+  - 当现有工资高于市场价格，员工就会留在现公司
+- 持续地基于市场价格制定薪酬是最好模式
+
+## Employee Success员工的成功
+
+- It’s pretty ingrained in our society that the size of one’s raise is the indicator of how well one did the prior year
+  - but for us the other factor is the outside market
+- Employee success is still a big factor in comp because it influences market value
+  - In particular, how much we would pay to keep the person
+
+- 在我们的社会里，一个员工的加薪幅度是上一年度业绩好坏的指示器，这已经是根深蒂固的观念
+  - 但是对于我们来说，另一个因素是外部的人力资源市场
+- 员工的成功依然是薪酬的重要因素，因为它影响了市场价值
+  - 特别是，我们愿意为留下一个人花多少钱？
+
+
+## Good For Each Employee to Understand Their Market Value每个员工知道自己的市场价格是好事
+
+- It’s a healthy idea, not a traitorous one, to understand what other firms would pay you, by interviewing and talking to peers at other companies
+  - Talk with your manager about what you find in terms of comp
+  - Stay mindful of company confidential information
+
+- 通过在其它公司的同业了解别人会花多少钱来雇佣自己，这是一个健康而非背叛的想法
+  - 和你的上级谈谈你在薪酬市值的发现
+  - 对公司的机密情报保持警觉
+
+## Efficiency效用
+
+- Big salary is the most efficient form of comp 
+  - Most motivating for any given expense level
+  - No bonuses, no free stock options, no philanthropic match
+  - Instead, put all that expense into big salaries, and give people freedom to spend their salaries as they think best
+- Health benefits: employees get $10k per year
+  - If they choose Netflix plans that are less than $10k, they keep the difference
+  - If they don’t need benefits from us, they keep all $10k
+  - CEO or receptionist: everyone gets $10k for benefits
+
+- 高薪是最有效的薪酬形式
+  - 在任何给定的费用中，高薪最具激励性
+  - 没有奖金，没有免费的期权，没有慈善比赛
+  - 相反的，把所有费用尽可能的打入高薪酬包，给予员工按照自己的意图花费薪水的自由
+
+## Optional Options期权
+
+- Employees get top of market salary, and then can request to trade salary for stock options
+- Some people take all cash, some people request half their comp in options
+  - Both are OK
+- This is consistent with freedom and responsibility, and lets employees decide how much risk/reward is comfortable for them
+
+- 员工得到人力市场上的最高工资，然后他们可以要求把工资兑换成为期权
+- 有的人选择全拿现金，有的人要求拿一半工资兑换成期权
+  - 两种都没问题
+- 这是对自由与责任的坚持，它让员工决定自己能承受多大程度上的风险/回报
+
+## Details on Stock Options期权细节
+
+- The options are fully vested and are 10-years-to-exercise options, independent of how long one stays at 
+- These fully vested options are granted monthly at the then current stock price, so employees get price averaging on their exercise price
+- These options cost employees less than half of what such options would cost in the open market, and are from pre-tax salary, so are a great deal
+- Employees can change their option request annually
+- Options become valuable only if Netflix stock climbs
+
+- Netflix期权分10年行使，而且一经发放即为员工完全持有，随时可以转手，无论这个员工在Netflix工作了多长时间
+- 这些员工完全持有的期权依照当时的市场股票价格按月发放，因此员工按照行使期权的平均价格获利
+- 期权按照不到市场股价一半的价格买给员工，而且是用税前工资购买，因此是个对员工有利的交易
+- 员工每年都可以要求改变期权数额
+- 唯有Netflix股价上扬，期权才具有价值
+
+## No Vesting or Deferred Comp没有期权工资或者延期工资
+
+- We don’t want managers to “own” their people with vesting – all comp is fully vested
+- We want managers to be responsible for creating a great place to work, and paying at the top of market
+- Employees are free to leave us anytime, without penalty, but nearly everyone stays
+- Employees stay because they are passionate about their work, and well paid, not because of a deferred compensation system
+
+- 我们不希望管理者通过扣发工资的方式控制员工，所有薪酬足额下发
+- 我们要求管理者负责建立起最好的工作环境，支付市场最高工资
+- 员工可以在任何时候辞职，无需缴纳罚金，但这么做了之后几乎所有人都留了下来
+- 员工留下来的原因是他们对工作有热情，薪酬丰厚，而不是因为有一个延期发放工资的系统
+
+## No Ranking Against Other Employees不要用等级刺激员工
+
+- We avoid “top 30%” and “bottom 10%” rankings amongst employees
+- We don’t want employees to feel competitive with each other
+- We want all of our employees to be “top 10%” relative to the pool of global candidates
+- We want employees to help each other, and they do
+
+- 我们避免用“最好的30%”或者“最差的10%”这样的等级来刺激员工
+- 我们不希望员工感觉到彼此之间是竞争关系
+- 我们希望员工是所有应聘者中的“最好的10%”
+- 我们希望员工彼此帮助，而他们也的确做到了
 
 
 
+# Promotions & Development （晋升和成长）
 
-#Pay Top of Market（支付市场最高工资）
+In some time periods, in some groups, there will be lots of opportunity and growth at Netflix
 
+在某些时期，在某些团队内，公司的确存在大量的机会和发展空间
 
+Some people, through both luck and talent, will have extraordinary career growth
 
-
-
-#Promotions & Development （晋升和成长）
-
-
-
+有些既有运气又有能力的人，会获得异乎寻常的职业生涯发展
 
 
+## Baseball Analogy: Minors to Majors篮球类比：小联盟和大联盟
+
+- Very talented people usually get to move up, but only true for the very talented
+- Some luck in terms of what positions open up and what the competition is
+- Some people move to other teams to get the opportunity they want
+- Great teams keep their best talent
+- Some minor league players keep playing even though they don’t move up because they love the game
+
+- 非常有才华的人经常得到晋升，但仅仅是对那些真有才华的人来说是这样
+- 有些运气是依仗有什么位置空缺，或者面对某种竞争
+- 有些人转岗到其他团队获得了他们所需要的机会
+- 伟大的团队保留住他们最好的人才
+- 有些小联盟的球员即便没有得到升迁也继续打球，原因是他们热爱这个游戏
+
+## Netflix Doesn’t Have to Be for Life不必在Netflix呆一辈子
+
+- In some times, in some groups, there may not be enough growth opportunity for everyone
+- In which case we should celebrate someone leaving Netflix for a bigger job that we didn’t have available to offer them
+- If that is what the person prefers
+
+- 在某些时候，某些团队，也许没有足够多的成长机会给每个人
+- 在这种情况下，我们应该为某些人离开Netflix得到更好的工作而庆祝，因为我们并没有合适机会可以给他
+- 如果这是那个人所希望的话
+
+## Two Necessary Conditions for Promotion两种升职的必要条件
+
+- Job has to be big enough
+  - We might have an incredible manager of something, but we don’t need a director of it because job isn’t big enough
+    - If the incredible manager left, we would replace with a manager, not with a director
+  - Person has to be a superstar in current role
+    - Could get the next level job here if applying from outside and we knew their talents well
+    - Could get the next level job at peer firm that knew their talents well
+
+- 工作必须足够重要
+  - 我们也许在某些事情上拥有非常棒的经理，但是如果这个工作不足够重要的话，我们不会在其上安排一个总监
+    - 如果这个非常棒的经理离开了，我们会安排一个新的经理，而不是一个总监
+  - 这个人必须在现有的岗位上是个超级明星
+    - 如果我们从外面雇佣一个同样有才干的人进来，这个人能胜任高一个层次的工作
+    - 如果同业公司知道他的才干，他可以在那里得到更高层次的工作机会
+
+## Timing时机
+
+- If a manager would promote to prevent an employee from leaving, the manager should promote now instead of waiting
+- Both tests still have to be passed
+  - Job big enough
+  - Superstar in current role
+
+- 如果一个管理者可以通过升职来阻止一个员工的离去，那么这个管理者应该现在就给这个员工升职而不是等待
+- 以下两个测试必须得到通过
+  - 工作足够重要
+  - 在现有岗位上是超级明星
+
+## Development发展
+
+- We develop people by giving them the opportunity to develop themselves, by surrounding them with stunning colleagues and giving them big challenges to work on
+  - Mediocre colleagues or unchallenging work is what kills progress of a person’s skills
+
+- 我们通过给予员工自我发展的机会，提供周围一群杰出同事的方法帮助他们发展。同事，也给予他们足够大的挑战去为之奋斗
+  - 平凡的同事和无挑战的工作正是杀死员工工作技能的元凶
+
+## Career “Planning” Not for Us职业“规划”不是我们的菜
+
+- Formalized development is rarely effective, and we don’t try to do it
+  - e.g., Mentor assignment, rotation around a firm,  multi-year career paths, etc.
+
+- 形式化的个人职业规划很少奏效，我们也不会尝试去做
+  - 例如：导师和项目指导，公司内轮岗，年功职级通道等等
+
+## We Support Self-Improvement我们支持自我提升
+
+- High performance people are generally self-improving through experience, observation, introspection, reading, and discussion
+  - As long as they have stunning colleagues and big challenges to work on
+  - We all try to help each other grow
+  - We are very honest with each other
+
+- 高绩效人才大多能通过经验、观察、内省、阅读和讨论自我提升
+  - 只要他们还拥有杰出的一群同事和足够大的工作挑战
+  - 我们所有人都努力相互帮助对方成长
+  - 我们所有人都对彼此诚实
+
+We want people to manage their own career growth, and not rely on a corporation for “planning” their careers
+
+**我们希望员工管理他们自己的职业发展，而不是依赖于公司“规划”他们的职业生涯**
+
+Your Economic Security is based on your Skills and Reputation
+
+你的经济保障建立在你的技能水平和人品名声之上
+
+We try hard to consistently provide opportunity to grow both by surrounding you with great talent
+
+我们倾尽全力持续提供机会，使得你和你周围的杰出同事共同成长
+
+# 回顾
+
+We keep improvingour culture as we grow
+
+随着我们的成长，我们持续提升我们的企业文化
+
+We try to get betterat seeking excellence
+
+我们努力通过寻求卓越而变得更好
