--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -38,9 +38,7 @@ Our culture focuses on helping us achieve excellence
 - 支付市场最高工资
 - 晋升和成长
 
-# Values are what we Value
-
-（价值观来自于我们推崇和珍视的价值）
+# Values are what we Value（价值观来自于我们推崇和珍视的价值）
 
 The actual company values, as opposed to the nice-sounding values, are shown by who gets rewarded, promoted, or let go
 
@@ -61,145 +59,171 @@ At Netflix, we particularly value the following nine behaviors and skills in our
 ## Judgment(判断力)
 
 You make wise decisions (people, technical, business, and creative) despite ambiguity
+
 你在对人，对技术、对商务和对创新上能够做出明智的决定，摒弃模棱两可
 
 You identify root causes, and get beyond treating symptoms 
+
 你明辨事物根由，不为表象所惑
 
 You think strategically, and can articulate what you are, and are not, trying to do 
+
 你能战略性思考，有自知之明，并努力做到
 
 You smartly separate what must be done well now, and what can be improved later 
+
 你能很聪明地分清楚哪些事现在必须完成，哪些事可以稍后跟进
 
 ## Communication(沟通力)
 
 You listen well, instead of reacting fast, so you can better understand 
+
 你善于 **聆听** ，而非快速反驳。如此你能够更好地理解
 
 You are concise and articulate in speech and writing 
+
 你在说和写的时候 **简洁清晰**
 
 You treat people with respect independent of their status or disagreement with you
+
 你待人接物心存敬意，不在意对方的身份，也不在意对方持有异议
 
 You maintain calm poise in stressful situations 
+
 在重压之下，你也能镇定自若
 
 ## Impact(影响力)
 
 You accomplish amazing amounts of important work 
+
 你能完成众多重要工作
 
 You demonstrate consistently strong performance so colleagues can rely upon you 
+
 你的同事能仰仗你持续输出的强大工作能力
 
 
 You focus on great results rather than on process 
+
 你注重结果而非过程
 
 You exhibit bias-to-action, and avoid analysis-paralysis 
+
 你偏好先发制人而非谋定后动
 
-## Curiosity
-好奇心
+## Curiosity(好奇心)
 
 You learn rapidly and eagerly 
+
 快速学习且渴望学习
 
 You seek to understand our strategy, market, customers, and suppliers
+
 努力理解公司的战略、市场、用户和供应商
 
 You are broadly knowledgeable about business, technology and entertainment 
+
 拥有对商业、技术和娱乐的广泛认知
 
 You contribute effectively outside of your specialty 
+
 在你专长之外也能有效提供贡献
 
-## Innovation
-创新
+## Innovation(创新)
 
 You re-conceptualize issues to discover practical solutions to hard problems
+
 你能重构概念以找出难题的特别解决之道 
 
 You challenge prevailing assumptions when warranted, and suggest better approaches
+
 你能挑战成见，给出更好的方法
 
 You create new ideas that prove useful 
+
 你能想出的新点子且被证实有效
 
 You keep us nimble by minimizing complexity and finding time to simplify 
+
 你能通过降低复杂度，找到简化时间的方法以保持公司的敏捷
 
-## Courage
-勇气
-
+## Courage(勇气)
 
 You say what you think even if it is controversial 
+
 你想说什么就说什么，哪怕有所争议
 
 You make tough decisions without agonizing 
+
 你能毫无痛苦地作出艰难决定
 
 You take smart risks 
+
 你能明智地冒险
 
 You question actions inconsistent with our values 
+
 你能质疑和我们价值观不一的行为
 
-## Passion
-热情
-
+## Passion(热情)
 
 You inspire others with your thirst for excellence 
+
 以你对卓越的渴望激励他人
 
 You care intensely about Netflix‘s success 
+
 你对公司的成功深系于心
 
 
 You celebrate wins 
+
 你热爱胜利
 
 You are tenacious
+
 你坚忍不拔
 
 
-## Honesty
-诚实
+## Honesty(诚实)
 
+You are known for candor and directness
 
-You are known for candor and directness 
 众人认为你坦白直率
 
 You are non-political when you disagree with others 
+
 你不同意他人意见时并非出于公司政治的考量
 
 You only say things about fellow employees you will say to their face 
+
 你不背后议论他人
 
 You are quick to admit mistakes 
+
 你能很快承认错误
 
 
-## Selflessness
-无私
-
+## Selflessness(无私)
 
 You seek what is best for Netflix, rather than best for yourself or your group
+
 你寻求的是什么对Netflix最好，而不是什么对你自己和你的小团队最好 
 
 You are ego-less when searching for the best ideas 
+
 当大家一起找寻最佳方案时，你没有那么多自我要维护
 
 You make time to help colleagues 
+
 你愿意花时间帮助同事
 
 You share information openly and proactively
+
 你能主动开放地分享资讯
 
 
-# High Performance （追求高绩效）
+# High Performance(追求高绩效)
 
 Imagine if every person at Netflix is someone you respect and learn from…
 
@@ -333,7 +357,8 @@ Brilliant Jerks不羁天才
 
 In procedural work, the best are 2x better than the average. In creative/inventive work, the best are 10x better than the average, so huge premium on creating effective teams of the best
 
-对于程序型的工作，顶级员工的输出量是一般员工的2倍。 对于创新型/创意型的工作，顶级员工的输出量是一般员工的10倍！以顶级员工组成的高效团队就有那么大提升！
+对于程序型的工作，顶级员工的输出量是一般员工的2倍。 
+对于创新型创意型的工作，顶级员工的输出量是一般员工的10倍！以顶级员工组成的高效团队就有那么大提升！
 
 ## Why are we so insistent on high performance?为什么我们对高效能如此坚持？
 
@@ -410,8 +435,6 @@ Growth Increases Complexity
 
 成长增加了公司的复杂度
 
-
-
 Growth Also Often Shrinks Talent Density
 
 成长经常稀释了人才密度
@@ -421,16 +444,19 @@ Growth Also Often Shrinks Talent Density
 ## Chaos Emerges（混乱出现）
 
 Chaos and errors spike here – businesshas become too complex to runinformally with this talent level
-（混乱和错误钉牢这里，在这个人才水平上，业务已经变得太过复杂而不可能以非范式的形态运行。）
+
+混乱和错误钉牢这里，在这个人才水平上，业务已经变得太过复杂而不可能以非范式的形态运行。
 
 ![]()
 
 ## Process Emerges to Stop the Chaos流程开始出现以停止混乱
 
 No one loves process, but feels good compared to the pain of chaos
+
 没有人喜欢流程，但是和混乱带来的痛苦相比，前者让人感觉好一点。
 
 “Time to grow up” becomes the professional management’s mantra
+
 “成长的时候到了”已经成为职业经理人的密咒。
 
 ![]()
@@ -622,6 +648,7 @@ We don’t track hours worked per day or per week, so why are we tracking days o
 We realized…我们意识到了
 
 We should focus on what people get done, not on how many days worked Just as we don’t have an 9am-5pm workday policy, we don’t need a vacation policy
+
 我们应该关注人们做了什么，而不是做了多少天。既然我们没有朝九晚五的工作时间规定，我们也就不需要假期规定。
 
 ## Netflix Vacation Policy and TrackingNetflix休假规定和考勤管理是
@@ -647,6 +674,7 @@ Netflix leaders set good examples by taking big vacations – and coming back in
 ## Another Example of Freedom and Responsibility…自由与责任的其他一些例子
 
 Most companies have complex policies around what you can expense, how you travel, what gifts you can accept, etc. 
+
 围绕员工如何花销，如何出差，可以接受何种馈赠等等，大多数公司都会制定复杂的政策。
 
 Plus they have whole departments to verify compliance with these policies
@@ -712,7 +740,7 @@ The best managers figure out how to get great outcomes by setting the appropriat
 
 Provide the insight and understanding to enable sound decisions
 
-(提供洞察力和理解力去促成合理的决定。)
+提供洞察力和理解力去促成合理的决定。
 
 Context (embrace) 情境管理（要坚持）
 
