--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -17,7 +17,9 @@ Our culture focuses on helping us achieve excellence
 
 我们的文化聚焦于帮助自己达成卓越
 
-# Seven Aspects of our Culture
+#  Table of Contents
+
+Seven Aspects of our Culture(文化的7个方面)
 
 - Values are what we Value
 - High Performance
@@ -28,8 +30,6 @@ Our culture focuses on helping us achieve excellence
 - Promotions & Development
 
 
-# 文化的7个方面
-
 - 价值观来自于我们推崇和珍视的价值
 - 追求高绩效
 - 自由和责任
@@ -38,7 +38,7 @@ Our culture focuses on helping us achieve excellence
 - 支付市场最高工资
 - 晋升和成长
 
-# Values are what we Value（价值观来自于我们推崇和珍视的价值）
+# Chapter 1: Values are what we Value（价值观来自于我们推崇和珍视的价值）
 
 The actual company values, as opposed to the nice-sounding values, are shown by who gets rewarded, promoted, or let go
 
@@ -223,7 +223,7 @@ You share information openly and proactively
 你能主动开放地分享资讯
 
 
-# High Performance(追求高绩效)
+# Chapter 2: High Performance(追求高绩效)
 
 Imagine if every person at Netflix is someone you respect and learn from…
 
@@ -386,7 +386,7 @@ Great Workplace is Stunning Colleagues
 
 
 
-# Freedom & Responsibility（自由和责任）
+# Chapter 3: Freedom & Responsibility（自由和责任）
 
 ## The Rare Responsible Person
 
@@ -724,7 +724,7 @@ Flexibility is More Important than Efficiencyin the Long Term
 **长期来看，灵活性远比效率重要**
 
 
-# Context, not Control（情景管理而非控制）
+# Chapter 4: Context, not Control（情景管理而非控制）
 
 If you want to build a ship, don't drum up the people to gather wood, divide the work, and give orders.  Instead, teach them to yearn for the vast and endless sea.“ 
 
@@ -840,11 +840,7 @@ This is why we do new employee college, frequent department meetings, and why we
 - 控制管理在你所托非人时非常重要
   - 临时的，毫无疑问
 
-
-
-
-
-# Highly Aligned, Loosely Coupled（认同一致，松散耦合）
+# Chapter 5: Highly Aligned, Loosely Coupled（认同一致，松散耦合）
 
 ## Three Models of Corporate Teamwork合作团队的3种模式
 
@@ -922,7 +918,7 @@ Goal is to be Big and Fast and Flexible
 目标是：更大，更快，更灵活。
 
 
-# Pay Top of Market（支付市场最高工资）
+# Chapter 6: Pay Top of Market（支付市场最高工资）
 
 ## Pay Top of Market is Core toHigh Performance Culture支付市场最高薪酬是高绩效文化的核心
 
@@ -1144,7 +1140,7 @@ Employees will feel they are getting paid well relative to their other options i
 
 
 
-# Promotions & Development （晋升和成长）
+# Chapter 7: Promotions & Development （晋升和成长）
 
 In some time periods, in some groups, there will be lots of opportunity and growth at Netflix
 
@@ -1247,7 +1243,7 @@ We try hard to consistently provide opportunity to grow both by surrounding you 
 
 我们倾尽全力持续提供机会，使得你和你周围的杰出同事共同成长
 
-# 回顾
+# Review回顾
 
 We keep improvingour culture as we grow
 
